--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,9 @@
 
     <h3> Notable achievements </h3>
         <ul>    
-    		<li> The <i> <a href="https://italiausa.org/en/home-eng/"> Italy-USA Foundation <a> </i> awarded in 2024, Mr. De Angelis Scorsone with the "America Youth Award for college talent" and a scholarship for the executive Master in Leadership for International Relations and Made in Italy. Additionally, he has been awarded with the <a href="https://www.discoup.com/borsa-di-studio.html">Young Entrepeneurs Scholarship</a> from a private company in 2018. </li>
+    		<li> In 2024, the <a href="https://italiausa.org/en/home-eng/"> Italy-USA Foundation <a> </i> awarded Mr. De Angelis Scorsone the 'America Youth Award for College Talent' and a scholarship for the Executive Master in Leadership for International Relations and Made in Italy. Additionally, he was awarded the <a href="https://www.discoup.com/borsa-di-studio.html">Young Entrepreneurs Scholarship</a> from a private company in 2018.
+            </li>
+
             <li> As a student representative at Roma Tre University, he was one of the few students who served in almost all central bodies of academic governance. </li>
         </ul>
         
