--- a/bio.html
+++ b/bio.html
@@ -28,7 +28,7 @@
 		<p class="med">Federico De Angelis Scorsone is a PhD student in Finance at Sapienza University, starting from September 2024.</p>
 		<p class="med">He received his BSc degree in Economics from Roma Tre University in 2021 and his MSc in Economics <i> cum laude </i> from the same university in 2024. He is a <a href="https://www.credly.com/badges/5af92f00-d634-49ac-bcb5-fdb1a2ea7540/linked_in_profile">MathWorks Certified MATLAB Associate </a> and holds an <a href=assets/IELTS_result.pdf>IELTS score of 8.00/9.00</a>. </p>
 		<p class="med"> Mr. De Angelis Scorsone served on various institutional bodies, such as the Board of Directors and the Academic Senate of Roma Tre University, as well as the Youth Council of Rome’s II District. </p>
-        <p class="med"> In addition, e has been involved in various volunteering experiences. He spent 3 months in 2018 volunteering with <a href="https://aiesec.org/">AIESEC International</a> in Azerbaijan, and he is currently a member of <a href="https://www.rotary.org/en/get-involved/rotaract-clubs">Rotaract</a>, a Rotary-sponsored association. </p>
+        <p class="med"> In addition, he has been involved in various volunteering experiences. He spent 3 months in 2018 volunteering with <a href="https://aiesec.org/">AIESEC International</a> in Azerbaijan, and he is currently a member of <a href="https://www.rotary.org/en/get-involved/rotaract-clubs">Rotaract</a>, a Rotary-sponsored association. </p>
         <p class="med"> He was born in Rome on July 29, 1998 </p>
 		
 
